# bullish-ssg

./: .tmuxp.yaml  README.md  devenv.nix  pyproject.toml
.scratch/: REPO_RULES.md
.scratch/projects/01-zensical-github-pages/: CONCEPT.md  GITHUB_PAGES_INTEGRATION.md  IMPLEMENTATION_OVERVIEW.md  REPO_DOCS_STRATEGY.md  ZENSICAL_RESEARCH.md
.scratch/projects/02-bullish-ssg-implementation-guide/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  IMPLEMENTATION_GUIDE.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/03-initial-code-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  INITIAL_CODE_REVIEW.md  PLAN.md  PROGRESS.md  STEP_6_7_CODE_REVIEW.md  STEP_8_9_CODE_REVIEW.md
.scratch/projects/04-step-6-7-remediation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/05-step-8-9-remediation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/06-remaining-steps-implementation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  (+3 more)
src/bullish_ssg/: __init__.py  cli.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_build_dry_run.py  test_cli_deploy_dry_run.py  test_cli_init.py  test_cli_link_vault.py  test_cli_validate.py  test_e2e_matrix.py
tests/unit/: __init__.py  test_classify.py  test_cli_help.py  test_config_loader.py  test_config_schema.py  test_content_discovery.py  test_deploy_adapters.py  test_frontmatter.py  test_init_scaffold.py  test_init_templates.py  test_render_kiln_adapter.py  test_validate_rules.py  test_vault_link_manager.py  test_vault_link_resolver.py  test_wikilinks.py
(+124 files in other folders)
