[project]
name = "bullish-ssg"
version = "0.1.0"
description = "A static site generator for the Bullish Cooperative Universe"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.12.0",
    "tomli-w>=1.2.0",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
bullish-ssg = "bullish_ssg.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "ty",
  "ruff>=0.5.0",
]

[project.urls]
homepage = "https://github.com/Bullish-Design/bullish-ssg"
repository = "https://github.com/Bullish-Design/bullish-ssg.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/bullish_ssg)
packages = ["src/bullish_ssg"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=bullish_ssg --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
